desktop_file = i18n.merge_file(
  input: 'com.github.reyncode.peek.desktop.in',
  output: 'com.github.reyncode.peek.desktop',
  type: 'desktop',
  po_dir: 'po',
  install: true,
  install_dir: datadir / 'applications'
)

install_data(
  'org.gnome.Adwaita1.Demo.svg',
  install_dir: datadir / 'icons' / 'hicolor' / 'scalable' / 'apps'
)
