sources = [
  'main.c',
  'peek-application.c', 'peek-application.h',
  'peek-window.c', 'peek-window.h',
  'peek-tree-view.c', 'peek-tree-view.h',
  'peek-tree-model.c', 'peek-tree-model.h',
  'peek-process.c', 'peek-process.h',
]

executable(
  meson.project_name(),
  sources: sources + resources,
  dependencies: deps,
)
